# RoboSub

./: .gitignore  ExternalDepth&Temp.py  README.md  leak_detect.bash  rosSource.bash
ucf_sub/src/sensors/: ExternalDepthAndTemp.py
ucf_sub/src/sub_bringup/launch/: robot.launch
ucf_sub/src/sub_cmd_multiplexer/: CMakeLists.txt  package.xml
ucf_sub/src/sub_cmd_multiplexer/launch/: dualjoy.launch
ucf_sub/src/sub_definition/: test.urdf
ucf_sub/src/sub_localization/: CMakeLists.txt  package.xml
ucf_sub/src/sub_localization/launch/: sub_localization.launch  sub_localization.xml
ucf_sub/src/sub_trajectory/: CMakeLists.txt
ucf_sub/src/sub_utils/: CMakeLists.txt  package.xml
ucf_sub/src/sub_vision/: CMakeLists.txt
ucf_sub_catkin_ros/src/sub_bringup/: timestamp.sh
ucf_sub_catkin_ros/src/sub_definition/: CMakeLists.txt  package.xml  test.urdf
ucf_sub_catkin_ros/src/sub_trajectory/: CMakeLists.txt  package.xml
ucf_sub_catkin_ros/src/sub_trajectory/cfg/: active_stability.cfg  vector_thrust_control.cfg
ucf_sub_catkin_ros/src/sub_trajectory/msg/: StabilityMode.msg  ThrusterStatus.msg
ucf_sub_catkin_ros/src/sub_trajectory/param/: high_level_thrusters.param
ucf_sub_catkin_ros/src/sub_trajectory/src/: active_stability.py  thruster_control_server.py  trajectory_planner.py  vector_thrust_control.py
ucf_sub_catkin_ros/src/sub_utils/: readme.md
ucf_sub_catkin_ros/src/sub_vision/: CMakeLists.txt
ucf_sub_stm32/Hippocampus_ESC_commander/: .cproject  .mxproject  .project  Hippocampus_ESC_commander.ioc  mx.scratch
ucf_sub_stm32/Hippocampus_ESC_commander/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h
ucf_sub_stm32/Hippocampus_ESC_commander/Src/: dma.c  gpio.c  main.c  stm32l4xx_it.c  tim.c  usart.c
(+113 files in other folders)
