<?xml version="1.0"?>
<package>
	<name>sub_localization</name>
	<version>0.0.0</version>
	<description>The sub_localization package</description>
	<maintainer email="robotics@ucf.edu">UCF Robotics</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>robot_localization</build_depend>
	<run_depend>robot_localization</run_depend>
</package>
